version 0.5:
	* Duck typed the Array class to work with Qpid::Proton::Data.
	* Duck typed the Hash class to work with Qpid::Proton::Data.

version 0.4:
	* No language-specific features developed in this release.

version 0.3:
	* No language-specific features developed in this release.
	* Dropped the Rakefile in favor of packaging with a gemspec.
	* Removed the qpid_proton/version.rb file as unused.

version 0.2:
	* First implementation of the stable APIs on top of swig.
	* Wrote the Rspec tests to test the new APIs.
	* Added SimpleCov support to monitor Rspec test coverage.